k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
spec:
  type: ClusterIP
  ports:
  - port: 3000
  selector:
    app: user-service
